syntax = "proto3";
package category.v1;
option go_package = "github.com/GoldenSheep402/Hermes/pkg/proto/go/category/v1;categoryV1";

import "google/api/annotations.proto";

service CategoryService {
  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse) {
    option (google.api.http) = {
      post: "/gapi/category/v1/info"
      body: "*"
    };
  }

  rpc GetCategory(GetCategoryRequest) returns (GetCategoryResponse) {
    option (google.api.http) = {
      get: "/gapi/category/v1/info"
    };
  }

  rpc UpdateCategory(UpdateCategoryRequest) returns (UpdateCategoryResponse) {
    option (google.api.http) = {
      put: "/gapi/category/v1/info"
      body: "*"
    };
  }

  rpc DeleteCategory(DeleteCategoryRequest) returns (DeleteCategoryResponse) {
    option (google.api.http) = {
      delete: "/gapi/category/v1/info"
    };
  }

}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated CategoryMetaData metaData = 4;
}
message CategoryMetaData {
  string id = 1;
  string categoryId = 2;
  string key = 3;
  int32  order = 4;
  string description = 5;
  string type = 6;
  string value = 7;
  string defaultValue = 8;
}

// GetCategory
message GetCategoryRequest {
  string id = 1;
}
message GetCategoryResponse {
  Category category = 1;
}

// CreateCategory
message CreateCategoryRequest {
  Category category = 1;
}
message CreateCategoryResponse {}

// UpdateCategory
message UpdateCategoryRequest {
  Category category = 1;
}
message UpdateCategoryResponse {}

// DeleteCategory
message DeleteCategoryRequest {
  string id = 1;
}
message DeleteCategoryResponse {}